--- a/base_di_partenza/assets/css/style.css
+++ b/base_di_partenza/assets/css/style.css
@@ -11,6 +11,26 @@ body {
 * {box-sizing: border-box;}
 hr {display: none;} /* rimuove l'elemento */
 
+/*PER MOBILE*/
+@media screen and (max-width:576px) {
+    body {
+        font-family: Poppins, 'Helvetica Neue', sans-serif;
+    font-size: 0.99rem;
+    line-height: 1.5;
+    padding: 15px;
+    background-image: url('../img/sfondo.png');
+    background-position: center center;
+
+    }
+    
+  .primili{
+    display: inline-block;
+  }
+  
+
+  }
+
+
 /* HEADER */
 header {
     background: rgb(0,160,198);
@@ -41,6 +61,15 @@ header nav li a:hover {
 }
 header nav li a::before {
     content: "\22c6\0020";
+}
+
+.logo{
+    width: 75px;
+    height: auto;
+    border: 5px solid #a12572;
+    padding: 8px;
+    display: inline-block;
+    box-shadow: inset 0 0 0 5px rgb(14, 136, 177)
 }
 
 /* MAIN */
@@ -178,3 +207,4 @@ footer {
 footer a {
     color: fuchsia;
 }
+
